[workspace]

members = [
    ".",
    "examples/example_host_system",
    "examples/example_plugin",
    "wings_host",
    "wings_macro"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/wings"
readme = "README.md"
description = """
WASM plugin system for Geese.
"""

[workspace.dependencies]

# Internal dependencies
example_host_system = { path = "examples/example_host_system" }
example_plugin = { path = "examples/example_plugin" }
wings = { path = ".", version = "0.1.0" }
wings_host = { path = "wings_host", version = "0.1.0" }
wings_macro = { path = "wings_macro", version = "0.1.0" }

# External dependencies

anyhow = { version = "1.0.82", default-features = false }
bincode = { version = "1.3.3", default-features = false }
const_list = { version = "0.1.0", default-features = false }
fxhash = { version = "0.2.1", default-features = false }
geese = { version = "0.3.9", default-features = false }
quote = { version = "1.0.36", default-features = false }
proc-macro2 = { version = "1.0.81", default-features = false }
serde = { version = "1.0.199", default-features = false, features = [ "derive" ] }
syn = { version = "2.0.60", default-features = false, features = [ "full", "parsing", "printing", "proc-macro", "extra-traits" ] }
thiserror = { version = "1.0.59", default-features = false }
topological-sort = { version = "0.2.2", default-features = false }
wasm_runtime_layer = { version = "0.3.0", default-features = false }
wasmi = { version = "0.31.2", default-features = false }

[package]
name = "wings"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
bincode.workspace = true
const_list.workspace = true
serde.workspace = true
thiserror.workspace = true
wings_macro.workspace = true

[dev-dependencies]
geese.workspace = true
example_host_system.workspace = true
wasm_runtime_layer = { workspace = true, features = [ "backend_wasmi" ] }
wasmi.workspace = true
wings_host.workspace = true