[package]
name = "wings_example"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
geese.workspace = true
example_host_system.workspace = true
wasmi_runtime_layer.workspace = true
wings.workspace = true
wings_host.workspace = true