[package]
name = "wings_host"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
bincode.workspace = true
const_list.workspace = true
fxhash.workspace = true
geese.workspace = true
serde.workspace = true
topological-sort.workspace = true
wasm_runtime_layer.workspace = true
wings_marshal.workspace = true